# mohspitality

./: pyproject.toml
app/: auth.py  main.py
app/config/: config.py
app/database/: db.py
app/models/: user_models.py
app/routers/: auth_router.py  qrcode_router.py  user_router.py
app/schemas/: item_schema.py  profile_schema.py  room_schema.py  subscriptions.py  user_schema.py
app/services/: auth_service.py  profile_service.py  qrcode_service.py  room_service.py  subscription_service.py
app/utils/: utils.py
